--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -5,5 +5,12 @@
       "files": ["**/*.scss"],
       "customSyntax": "postcss-scss"
     }
+  ],
+  "rules": {
+    "number-leading-zero": "never",
+    "selector-class-pattern": null
+  },
+  "ignoreFiles": [
+    "coverage/**/*.css"
   ]
 }
