--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "webpack-cli": "^4.9.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "babel-jest": "^27.3.1",
     "cli-progress": "^3.9.1",
     "colors": "^1.4.0",
     "commander": "^8.3.0",
@@ -43,6 +47,7 @@
     "stylelint": "^14.1.0",
     "stylelint-config-standard-scss": "^2.0.1",
     "stylelint-webpack-plugin": "^3.1.0",
+    "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "webpack-bundle-analyzer": "^4.5.0",
