--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -8,7 +8,8 @@
   ],
   "rules": {
     "number-leading-zero": "never",
-    "selector-class-pattern": null
+    "selector-class-pattern": null,
+    "color-function-notation": null
   },
   "ignoreFiles": [
     "coverage/**/*.css"
