--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cli-progress": "^3.9.1",
     "colors": "^1.4.0",
     "commander": "^8.3.0",
+    "copy-webpack-plugin": "^10.0.0",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.1.4",
     "eslint": "^8.3.0",
